--- a/Contact.html
+++ b/Contact.html
@@ -8,8 +8,8 @@
     <h1>My Contact Information</h1>
     <hr>
     <p>My Fictional Adress</p>
-    <p>+0507 054 71 20</p>
-    <p>E-mail: myavuztas@gmail.com</p>
+    <p>+0123 234 456 55</p>
+    <p>E-mail: example@gmail.com</p>
 
   </body>
 </html>
